Changed tos directory location in Makefiles. Removed UartByte. Resolved warning related to KnowledgeCenter if statements.

--- a/ship_agent/Makefile
+++ b/ship_agent/Makefile
@@ -2,6 +2,6 @@ COMPONENT=shipmainC
 CFLAGS += -DRF230_DEF_CHANNEL=20
 CFLAGS += -I../common      #for types.h and comm.h
 
-TINYOS_ROOT_DIR?=/opt/tinyos-main
+TINYOS_ROOT_DIR?=../../tinyos-main
 include $(TINYOS_ROOT_DIR)/Makefile.include
 
