--- a/sysCrane_agent/Makefile
+++ b/sysCrane_agent/Makefile
@@ -3,6 +3,6 @@ CFLAGS += -DRF230_DEF_CHANNEL=20
 CFLAGS += -I./SpecialSerialP    #some special serial handling stuff I cooked up
 CFLAGS += -I../common      #for types.h and comm.h
 
-TINYOS_ROOT_DIR?=/opt/tinyos-main
+TINYOS_ROOT_DIR?=../../tinyos-main
 include $(TINYOS_ROOT_DIR)/Makefile.include
 
